<resources>
    <string name="app_name">AppGestion</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Echelon Tracker</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Bienvenido</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="menu_programming">Programaciones</string>
    <string name="menu_driver">Conductores</string>
    <string name="menu_vehicle">Vehículos</string>
    <string name="username">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="action_login">Iniciar sesión</string>

    <string name="title_menu_item_search">Buscar....</string>
    <string name="title_menu_item_another">otros</string>
    <string name="menu_item_title_settings">Configuraciones</string>
    <string name="menu_item_title_logout">Salir</string>
    <string name="menu_item_title_filters">Filtros</string>

    <string name="message_logout_resource">Salió de la apicación</string>
    <string name="message_error_resource">Ocurrió un error</string>
    <string name="alert_dialog_message_logout">¿Estás seguro que quieres cerrar sesión?</string>
    <string name="alert_dialog_cancel">Cancelar</string>
    <string name="alert_dialog_logout">Salir</string>
    <string name="alert_dialog_message_delete">¿Estás seguro que quieres eliminar el registro?</string>
    <string name="alert_dialog_delete">ELiminar</string>
    <string name="opciones">1</string>

</resources>
