<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        android:title="@string/title_menu_item_search"/>

    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/ic_tune"
        app:showAsAction="collapseActionView|ifRoom"
        android:visible="false"
        android:title="@string/menu_item_title_filters"/>

    <item
        android:id="@+id/action_more"
        android:icon="@drawable/ic_more_vert_black_24dp"
        android:title="@string/title_menu_item_another"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_settings"
                android:orderInCategory="100"
                android:title="@string/menu_item_title_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                app:showAsAction="never" />

            <item
                android:id="@+id/action_logout"
                android:orderInCategory="100"
                android:title="@string/menu_item_title_logout"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                app:showAsAction="never" />
        </menu>
    </item>


</menu>
